# wifi-filesystem

./: CMakeLists.txt  README.md  main.cpp  server.cpp  server_read.cpp  server_write.cpp
USBMSCESP32-S2mini/: USBMSCESP32-S2mini.ino  structs.h  wifi_secret.h
fat32/: fat32_img.cpp  fat32_img.h  ifat32.h
server/: server.cpp  server.h
